// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`align=0 1`] = `
KeywordAlignEquals "align=" 0
Number "0" 6
`;

exports[`assume string ended on newline 1`] = `
StringStartQuote "\\"" 0
StringNonEscape "a" 1
ErrorStringUnterminated "\\n" 2
KeywordInteger32 "i32" 3
`;

exports[`collapse error tokens 1`] = `ErrorInvalidCharacter ",," 0`;

exports[`collapse multiple non escape tokens into one token 1`] = `
StringStartQuote "\\"" 0
StringNonEscape "foo" 1
StringEndQuote "\\"" 4
`;

exports[`error before whitespace does not include whitespace 1`] = `
ErrorInvalidCharacter "," 0
Number "0" 2
`;

exports[`error then keyword 1`] = `
ErrorInvalidCharacter "," 0
KeywordInteger32 "i32" 1
`;

exports[`error token 1`] = `ErrorInvalidCharacter "," 0`;

exports[`funci32 1`] = `UnknownKeyword "funci32" 0`;

exports[`hex 1`] = `Number "0x1" 0`;

exports[`hex exponent 1`] = `Number "0x1p1" 0`;

exports[`if then 1`] = `
OpenBracket "(" 3
KeywordIf "if" 4
OpenBracket "(" 7
KeywordInteger32GreaterThanUnsigned "i32.gt_u" 8
OpenBracket "(" 17
KeywordLocalGet "local.get" 18
Identifier "$blockLength" 28
CloseBracket ")" 40
OpenBracket "(" 42
KeywordInteger32Constant "i32.const" 43
Number "55" 53
CloseBracket ")" 55
CloseBracket ")" 56
OpenBracket "(" 58
KeywordThen "then" 59
OpenBracket "(" 67
KeywordLocalSet "local.set" 68
Identifier "$blockIndex" 78
OpenBracket "(" 90
KeywordInteger32Add "i32.add" 91
OpenBracket "(" 99
KeywordLocalGet "local.get" 100
Identifier "$blockIndex" 110
CloseBracket ")" 121
OpenBracket "(" 123
KeywordInteger32Constant "i32.const" 124
Number "1" 134
CloseBracket ")" 135
CloseBracket ")" 136
CloseBracket ")" 137
CloseBracket ")" 141
CloseBracket ")" 142
`;

exports[`invalid string escape 1`] = `
StringStartQuote "\\"" 0
StringNonEscape "a" 1
ErrorStringInvalidEscape "\\\\ " 2
StringEndQuote "\\"" 4
`;

exports[`invalid string unicode escape 1`] = `
StringStartQuote "\\"" 0
ErrorStringInvalidUnicodeEscape "\\\\u" 1
StringNonEscape " " 3
StringEndQuote "\\"" 4
`;

exports[`invalid string unicode escape 2`] = `
StringStartQuote "\\"" 0
ErrorStringInvalidUnicodeEscape "\\\\u{" 1
StringNonEscape " " 4
StringEndQuote "\\"" 5
`;

exports[`invalid string unicode escape 3`] = `
StringStartQuote "\\"" 0
ErrorStringInvalidUnicodeEscape "\\\\u{0 }" 1
StringEndQuote "\\"" 7
`;

exports[`invalid string unicode escape 4`] = `
StringStartQuote "\\"" 0
ErrorStringInvalidUnicodeEscape "\\\\u{}" 1
StringEndQuote "\\"" 5
`;

exports[`line comment 1`] = `CommentLine ";;" 0`;

exports[`nested comment 1`] = `CommentBlock "(; a (; b ;) c ;)" 0`;

exports[`number 1`] = `Number "3." 0`;

exports[`number with exponent 1`] = `Number "1e2" 0`;

exports[`number with fraction 1`] = `Number "3.5" 0`;

exports[`offset=0 1`] = `
KeywordOffsetEquals "offset=" 0
Number "0" 7
`;

exports[`seperate error tokens around whitespace 1`] = `
ErrorInvalidCharacter "," 0
ErrorInvalidCharacter "," 2
`;

exports[`signed integer 1`] = `Number "+123" 0`;

exports[`string 1`] = `
StringStartQuote "\\"" 0
StringNonEscape "a" 1
StringEscapeHex "\\\\00" 2
StringEscapeTab "\\\\t" 5
StringEscapeNewline "\\\\n" 7
StringEscapeReturn "\\\\r" 9
StringEscapeQuote "\\\\\\"" 11
StringEscapeApostrophe "\\\\'" 13
StringEscapeBackslash "\\\\\\\\" 15
StringEscapeUnicode "\\\\u{0}" 17
StringEndQuote "\\"" 22
`;

exports[`string invalid character 1`] = `
StringStartQuote "\\"" 0
ErrorStringInvalidCharacter "\\u0000" 1
StringEndQuote "\\"" 2
`;

exports[`tokenise wasi hello world 1`] = `
OpenBracket "(" 3
KeywordImport "import" 4
StringStartQuote "\\"" 11
StringNonEscape "wasi_unstable" 12
StringEndQuote "\\"" 25
StringStartQuote "\\"" 27
StringNonEscape "fd_write" 28
StringEndQuote "\\"" 36
OpenBracket "(" 38
KeywordFunction "func" 39
Identifier "$fd_write" 44
OpenBracket "(" 54
KeywordParameter "param" 55
KeywordInteger32 "i32" 61
KeywordInteger32 "i32" 65
KeywordInteger32 "i32" 69
KeywordInteger32 "i32" 73
CloseBracket ")" 76
OpenBracket "(" 78
KeywordResult "result" 79
KeywordInteger32 "i32" 86
CloseBracket ")" 89
CloseBracket ")" 90
CloseBracket ")" 91
OpenBracket "(" 96
KeywordMemory "memory" 97
Number "1" 104
CloseBracket ")" 105
OpenBracket "(" 109
KeywordExport "export" 110
StringStartQuote "\\"" 117
StringNonEscape "memory" 118
StringEndQuote "\\"" 124
OpenBracket "(" 126
KeywordMemory "memory" 127
Number "0" 134
CloseBracket ")" 135
CloseBracket ")" 136
CommentLine ";; io vector\\n" 141
OpenBracket "(" 156
KeywordData "data" 157
OpenBracket "(" 162
KeywordInteger32Constant "i32.const" 163
Number "0" 173
CloseBracket ")" 174
StringStartQuote "\\"" 176
StringEscapeHex "\\\\08" 177
StringEndQuote "\\"" 180
CloseBracket ")" 181
CommentLine ";; pointer to string\\n" 183
OpenBracket "(" 206
KeywordData "data" 207
OpenBracket "(" 212
KeywordInteger32Constant "i32.const" 213
Number "4" 223
CloseBracket ")" 224
StringStartQuote "\\"" 226
StringEscapeHex "\\\\0e" 227
StringEndQuote "\\"" 230
CloseBracket ")" 231
CommentLine ";; length of string\\n" 233
OpenBracket "(" 255
KeywordData "data" 256
OpenBracket "(" 261
KeywordInteger32Constant "i32.const" 262
Number "8" 272
CloseBracket ")" 273
StringStartQuote "\\"" 275
StringNonEscape "Hello, World!" 276
StringEscapeNewline "\\\\n" 289
StringEndQuote "\\"" 291
CloseBracket ")" 292
OpenBracket "(" 297
KeywordGlobal "global" 298
Identifier "$stdout" 305
KeywordInteger32 "i32" 313
OpenBracket "(" 317
KeywordInteger32Constant "i32.const" 318
Number "1" 328
CloseBracket ")" 329
CloseBracket ")" 330
OpenBracket "(" 335
KeywordFunction "func" 336
OpenBracket "(" 341
KeywordExport "export" 342
StringStartQuote "\\"" 349
StringNonEscape "_start" 350
StringEndQuote "\\"" 356
CloseBracket ")" 357
OpenBracket "(" 362
KeywordDrop "drop" 363
OpenBracket "(" 372
KeywordCall "call" 373
Identifier "$fd_write" 378
OpenBracket "(" 393
KeywordGlobalGet "global.get" 394
Identifier "$stdout" 405
CloseBracket ")" 412
OpenBracket "(" 419
KeywordInteger32Constant "i32.const" 420
Number "0" 430
CloseBracket ")" 431
CommentLine ";; pointer to io vector\\n" 433
OpenBracket "(" 462
KeywordInteger32Constant "i32.const" 463
Number "1" 473
CloseBracket ")" 474
CommentLine ";; length of io vector\\n" 476
OpenBracket "(" 504
KeywordInteger32Constant "i32.const" 505
Number "20" 515
CloseBracket ")" 517
CommentLine ";; where to store number of bytes written\\n" 519
CloseBracket ")" 565
CloseBracket ")" 570
CloseBracket ")" 574
`;

exports[`untermianted string 1`] = `
StringStartQuote "\\"" 0
ErrorStringUnterminated "" 1
`;
